# griid

./: config.yml  config6x6.yml  instrument_basic.py  main.py  pyproject.toml  sampler.py
